2000-05-15  Jeffrey Altman <jaltman@columbia.edu>

        * hst_realm.c (krb5_get_host_realm)
          remove the searchlist and defaultrealm _kerberos queries

2000-05-09	Alexandra Ellwood <lxs@mit.edu>

	*localaddr.c: Fixed the local_addr_fallback_kludge so that it actually does something.
	Before that the error code it was handling was blowing it away in cleanup.

2000-04-28  Nalin Dahyabhai  <nalin@redhat.com>

	* ccdefname.c (get_from_os): Don't overflow buffer "name_buf".
	* kuserok.c (krb5_kuserok): Don't overflow buffer "pbuf".

2000-04-22  Ken Raeburn  <raeburn@mit.edu>

	* localaddr.c: Include stddef.h.
	(foreach_localaddr): Check each address against previously used
	addresses, and skip duplicates, in case multiple interfaces have
	the same address.  If called functions fail, drop out of loop and
	return nonzero.
	(krb5_os_localaddr): Increment count of addresses to include null
	pointer terminator.  Delete check for zero count.

2000-04-18  Danilo Almeida  <dalmeida@mit.edu>

	* prompter.c (krb5int_set_prompt_types): Set to actual value
	intead of 0.

2000-4-13	Alexandra Ellwood <lxs@mit.edu>

	* init_os_ctx.c: Added support to store a krb5_principal in the os_context 
	along with the default ccache name (if known, this principal is the same 
	as the last time we looked at the ccache.
	* ccdefname.c: Added support to store a krb5_principal in the os_context 
	along with the default ccache name (if known, this principal is the same 
	as the last time we looked at the ccache.

2000-04-04  Ken Raeburn  <raeburn@mit.edu>

	* locate_kdc.c (maybe_use_dns): Renamed from _krb5_use_dns.  Now
	takes an arg to indicate a key to look up in krb5.conf, falling
	back to "dns_fallback", and an arg indicating the default value if
	no config file entries match.
	(_krb5_use_dns_realm): New routine; use "dns_lookup_realm" and
	KRB5_DNS_LOOKUP_REALM setting.
	(_krb5_use_dns_kdc): New routine; use "dns_lookup_kdc" and
	KRB5_DNS_LOOKUP_KDC.